# forge-alloy

./: .gitignore  README.md  index.html
.attestation/: chain.json
.github/workflows/: attest-main.yml  attest-pr.yml
docs/: APPLICATIONS.md  ATTESTATION.md  ECOSYSTEM.md  FORGE-SEARCH.md  FORGE-TARGETS.md  GRID-TRANSPORT-INTERFACES.md  MODEL-COMPILER.md  SDK-ARCHITECTURE.md
docs/papers/: _draft_v2_30b_a3b_section.md
docs/verify/: index.html
examples/: qwen3.5-27b-code-128k-forged.alloy.json  qwen3.5-27b-code-full.alloy.json  qwen3.5-4b-code-128k-forged.alloy.json  qwen3.5-4b-code-128k-pruned.alloy.json  qwen3.5-4b-code-balanced-executed.alloy.json  qwen3.5-4b-code-balanced.alloy.json  qwen3.5-4b-multimodal-code.alloy.json
examples/queue/: 01-qwen3.5-9b-code-128k.alloy.json  02-qwen3.5-9b-code-128k-pruned.alloy.json  03-qwen3.5-0.8b-code-128k.alloy.json  04-qwen3.5-2b-code-128k.alloy.json  05-qwen3-vl-4b-code-ui.alloy.json
python/: pyproject.toml
python/forge_alloy/: __init__.py  repo_attest.py  types.py
python/forge_alloy/domains/: __init__.py  base.py  llm_forge.py  photo_provenance.py  registry.py  ticketing.py
python/tests/: test_acceptance_criteria.py  test_domain_extension_layout.py  test_regression_published_alloys.py
rust/: Cargo.toml
rust/src/: lib.rs
schema/: forge-alloy.schema.json
typescript/: package.json
typescript/src/: index.ts
verify/: index.html  registry.json
