[package]
name = "forge-alloy"
version = "0.1.0"
edition = "2021"
description = "Portable pipeline format for model forging"
license = "Apache-2.0"
repository = "https://github.com/CambrianTech/forge-alloy"
keywords = ["ai", "model", "forging", "pipeline", "quantization"]
categories = ["data-structures", "encoding"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", optional = true }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
typescript = ["ts-rs"]
